  * Add "Hide Away Contacts" and "Hide Contacts for Account" to the view options.
  * Fixed a bug where the view menu would show incorrect settings.
  * Status message is no longer searched when searching the contact list.
  * Fixed a lot of drag and drop bugs, such as being able to drag a group into another group.
  * Tooltips now display for collapsed groups. (#11951)
 
 Message Styles
  * You can now specify a different style for group chats, and customize all of the preferences independently of a regular chat. (#87)
  * Messages containing unordered lists are now displayed using bullets.
  * Styles now fall backs to root level files for Status.html and Content.html. (#10868)
  * Corrected sorting of message styles in their popup (#9498)
  * %message% is now replaced in a loop as we do other keywords. (#9672)
  * %service% is now replaced in all templates, not just messages. (#11872)
  * %senderPrefix% now contains a textual representation (., @, %, +, or an empty string) of the user's status in a group chat. (#11882)
  * %userIconPath% is now a valid replacement keyword in Status.html (#7508)
  * Added "action" to the %messageClasses% of /me messages. (#11894)
 
 Messaging
  * Messages from blocked contacts are now never displayed, even if the protocol allows them to send the message.
  * Added marking to the scroll bar like in [http://colloquy.info Colloquy]:
   * When your name (or what you decide to highlight) is mentioned in a chat, a grey line is added.
   * When the window or tab loses focus, a red line is added and you can "Jump to Focus Mark" to easily go to it.
   * You can access the "Jump to Previous Mark", "Jump to Next Mark" and "Jump to Focus Mark" by right-clicking the scroll bar, or from the new Display menu.
  * Added "Clear Display" to the new Display menu.
  * You can now customize the text which causes the "You are mentioned" event to fire from the advanced preferences.
  * Fixed a bug where emoticons would be displayed improperly. (#6440)